# Xion-hackton

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.sh
.cargo/: config
.github/workflows/: basic.yml
contracts/: Cargo.toml
contracts/multisig/: Cargo.toml  README.md
contracts/multisig-ica-factory/: Cargo.toml  README.md
contracts/multisig-ica-factory/src/: contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  state.rs  utils.rs
contracts/multisig/schema/: multisig.json
contracts/multisig/schema/raw/: execute.json  instantiate.json  query.json  response_to_proposal.json  response_to_reverse_proposals.json
contracts/multisig/src/: contract.rs  integration_tests.rs  msg.rs  state.rs
contracts/proxy/: Cargo.toml  README.md
contracts/proxy/src/: contract.rs  error.rs  msg.rs
demo/: .gitignore  README.md  package.json
demo/app/: func.tsx  globals.css  layout.tsx  page.tsx  propose.tsx  utils.tsx
demo/config/: contracts.config.ts
demo/types/: index.tsx
demo/utils/: args.tsx
frontend/: .eslintrc.json  README.md  next-seo.config.ts  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
frontend/components/: useCoinLogoURL.ts
frontend/components/AccountAddress/: index.tsx
frontend/components/AnimatedModal/: Content.tsx
frontend/components/AppFooter/: index.tsx
frontend/components/AppLogo/: index.tsx
frontend/components/CaptionAmount/: index.tsx
frontend/components/Card/: index.tsx
frontend/components/CardLink/: index.tsx
frontend/components/ChainLabel/: index.tsx
frontend/components/CheckItem/: index.tsx
frontend/components/CheloLabsLogo/: index.tsx
frontend/components/Coin/: index.tsx  useCoinLogoURL.ts
frontend/components/CoinAmount/: index.tsx
frontend/components/CoinLabel/: index.tsx
frontend/components/Divider/: index.tsx
frontend/components/Heading/: index.tsx
frontend/components/Icon/: index.tsx
frontend/components/NFTThumbnail/: index.tsx
frontend/components/NFTVaultLinkCard/: index.tsx
frontend/components/NumberText/: index.tsx
frontend/components/OverlayGrid/: Container.tsx
frontend/components/ProgressBar/: index.tsx
frontend/components/Table/: styles.tsx
frontend/components/Tag/: index.tsx
frontend/components/TextInput/: Container.tsx  constants.ts
frontend/components/UserAgentDetector/: index.tsx
frontend/config/: contracts.config.ts
frontend/connection/: keplr.ts  useAutoConnect.ts  useConnect.ts  useConnect.tsx  useDisconnect.tsx  useWallets.ts
frontend/constants/: app.ts  mock.ts  wallet.ts
frontend/data/: hooks.ts  types.ts
frontend/data/graphql/: apolloClients.ts
frontend/pages/: _app.tsx  create-vault.tsx  index.tsx  my-vaults.tsx  privacy-policy.tsx  raising-vault.tsx  terms-of-use.tsx
frontend/public/: manifest.json
frontend/store/: states.ts
frontend/struct/: Balance.ts  FTAmount.ts
frontend/styles/: globals.css  variables.css
frontend/types/: asset.ts  contract.ts  wallet.ts
frontend/utils/: ica.ts  injective.ts  multisig.ts  number.ts  propose.ts  text.ts  xion.ts
hermes/: .gitignore  config.toml
scripts/: README.md  config.ts  deploy.sh  deploy_msig.sh  get_state.sh  index.ts  instantiate_multisig.json  nft_owner.sh  open_ack.sh  open_channel.sh  open_try.sh  package.json  pnpm-lock.yaml  query_callback.sh  query_ica.sh  relay_packet.sh  run.sh  test_confio.sh
scripts/actions/: address.ts  confio.ts  create_channel.ts  create_ica.ts  events.ts  execute.ts  index.ts  injective_execute.ts  instantiate.ts  migrate.ts  propose.ts  propose_ica.ts  propose_ica_wasm.ts  query.ts  store.ts
scripts/messages/: Buy_nomos_nft_on_talis  factory_multisig.json  ica_buy_nfts.json  ica_buy_wasm.json  ica_send_funds.json  ica_transfer_nft.json  ica_transfer_nft_wasm.json  sale_nomos_nft_on_talis
scripts/types/: index.ts
scripts/utils/: args.ts  contract.ts  file.ts  ica.ts  wallet.ts
(+40 files in other folders)
