[workspace]
members = ["contracts/*"]
exclude = ["external/cw-ica-controller"]
resolver = "2"

[workspace.package]
version       = "0.1.3"
license       = "Apache-2.0"
edition       = "2021"
repository    = "https://github.com/chelofinance/Xion-hackton"
keywords      = ["cosmos", "cosmwasm", "ibc",  "ica", "xion"]
authors       = [ "0xR360 <rcontreraspimentel@gmail.com","srdtrk <srdtrk@hotmail.com>", "Chanaka <>"]
description = ""

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
panic = 'abort'
rpath = false
# Please do not disable these. Doing so will cause overflow checks in
# all workspace members to stop working. Overflows should be errors.
overflow-checks = true

[workspace.dependencies]
cosmwasm-schema = "1.5.0"
cosmwasm-std = { version = "1.5.0", features = ["cosmwasm_1_3"] }
cw-utils = "1.0.1"
cw2 = "1.1.2"
cw3 = "1.1.2"
cw-ownable = "0.5.1"
cw-storage-plus = "1.1.0"
schemars = "0.8.15"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
serde-json-wasm = "1.0.0"
thiserror = "1.0.49"
cw-ica-controller = { version = "0.4.1", default-features = false }
multisig = { path = "contracts/multisig" }
