[package]
name = "multisig"
edition= "2021"
version = {workspace=true}
authors = {workspace=true}
description = {workspace=true}
license = {workspace=true}

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = {workspace=true}
cw-utils ={workspace=true}
cw2 ={workspace=true}
cw3 ={workspace=true}
cw-storage-plus ={workspace=true}
cosmwasm-std ={workspace=true}
schemars ={workspace=true}
serde ={workspace=true}
thiserror ={workspace=true}

[dev-dependencies]
cw20 = {  version = "1.1.2" }
cw20-base = {  version = "1.1.2", features = ["library"] }
cw-multi-test = "0.16.1"
