[package]
name = "proxy"
description = "Proxy contract to execute multisig contracts"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = {workspace=true}
cosmwasm-std ={workspace=true}
schemars ={workspace=true}
serde ={workspace=true}
thiserror ={workspace=true}
multisig = { workspace = true, features = ["library"] }